// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action cell component renders an action correctly 1`] = `
<ForwardRef(TableCell)
  component="div"
  size="medium"
  variant="body"
>
  <testAction
    key="0"
    rowData="test"
  />
</ForwardRef(TableCell)>
`;

exports[`Action cell component renders no actions correctly 1`] = `
<ForwardRef(TableCell)
  component="div"
  size="medium"
  variant="body"
/>
`;
